--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ safe: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : iu-model's rc world
+title : RC Zone
 tagline: Site Tagline
 author :
   name : oscar_huang
